<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/sort_by"
            android:title="@string/sort_by"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_sort"
            android:iconTint="@color/white">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"/>
                <item
                    android:id="@+id/menu_date_create"
                    android:title="@string/date_create"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/white"
        />

</menu>